--- a/PdfBuilder/PdfBuilder/PdfBuilder.csproj
+++ b/PdfBuilder/PdfBuilder/PdfBuilder.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,7 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="jsreport.AspNetCore" Version="2.1.0" />
+    <PackageReference Include="jsreport.Binary.Linux" Version="2.11.0" />
+    <PackageReference Include="jsreport.Local" Version="2.3.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PdfBuilder.Data\PdfBuilder.Data.csproj" />
   </ItemGroup>
 
 </Project>
