--- a/PdfBuilder/PdfBuilder/PdfBuilder.csproj
+++ b/PdfBuilder/PdfBuilder/PdfBuilder.csproj
@@ -9,11 +9,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PdfBuilder.Data\PdfBuilder.Data.csproj" />
     <ProjectReference Include="..\PdfBuilder.Services\PdfBuilder.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="PdfBuilder.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
